# myinr

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: visualize.py
src/inr/: config.py  dataset.py  logger.py  main.py  train.py
src/inr/models/: __init__.py  instant_ngp.py  nerf.py  siren.py
tests/: test_models.py
