[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inr"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "torch",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
